--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,6 +6,11 @@
       "src": "favicon.ico",
       "sizes": "192x192",
       "type": "image/png"
+    },
+    {
+      "src": "icon.png",
+      "sizes": "256x256",
+      "type": "image/png"
     }
   ],
   "start_url": "./index.html",
